--- a/config.yaml
+++ b/config.yaml
@@ -12,7 +12,9 @@ batch: "200315_test"
 batch_parameters:
   "200315_test":
     d_files: "/cluster/projects/nn9864k/shared/supacow/raw_data/MS_spectra/200315_proteomics_test/timsTOFfiles" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
-    database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/*" # All files are treated with the same database(s). I'm not sure yet, if snakemake can handle globs..
+    #database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/*" # All files are treated with the same database(s). I'm not sure yet, if snakemake can handle globs..
+    database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/cp_cow_genome.faa" # All files are treated with the same database(s). I'm not sure yet, if snakemake can handle globs..
+
     samples:
       "s01": "20220302_A1_Slot1-01_1_1592.d"
       "s02": "20220302_A2_Slot1-02_1_1593.d"
