--- a/profiles/slurm/config.yaml
+++ b/profiles/slurm/config.yaml
@@ -1,7 +1,7 @@
 # [--snakefile FILE] 
 cores: 2048
 # [--local-cores N] 
-local-cores: 2
+#local-cores: 2
 #configfile: "configs/workflow.yaml"
 configfile: "config.yaml"
 jobs: 8
