Everything seems to work now

--- a/config.yaml
+++ b/config.yaml
@@ -23,10 +23,10 @@ batch_parameters:
     samples:
       "s01": "20220302_A1_Slot1-01_1_1592.d"
       "s02": "20220302_A2_Slot1-02_1_1593.d"
-      #"s03": "20220302_A3_Slot1-03_1_1594.d"
-      #"s04": "20220302_A4_Slot1-04_1_1595.d"
-      #"s05": "20220302_A5_Slot1-05_1_1596.d"
-      #"s06": "20220302_A6_Slot1-06_1_1597.d"
+      "s03": "20220302_A3_Slot1-03_1_1594.d"
+      "s04": "20220302_A4_Slot1-04_1_1595.d"
+      "s05": "20220302_A5_Slot1-05_1_1596.d"
+      "s06": "20220302_A6_Slot1-06_1_1597.d"
 
 
 
