--- a/profiles/slurm/config.yaml
+++ b/profiles/slurm/config.yaml
@@ -14,7 +14,7 @@ keep-going: true
 rerun-incomplete: true
 # [--shadow-prefix DIR] 
 # [--reason] 
-# [--latency-wait SECONDS] 
+latency-wait: 60
 # [--max-jobs-per-second MAX_JOBS_PER_SECOND] 
 # [--greediness GREEDINESS] 
 # [--runtime-profile FILE] 
