--- a/config.yaml
+++ b/config.yaml
@@ -15,8 +15,8 @@ batch_parameters:
     d_base: "/cluster/projects/nn9864k/shared/supacow/raw_data/uplc-msms-timstof/220302_proteomics_test/timsTOFfiles" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
     
     #database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/*" # All files are treated with the same database(s). I'm not sure yet, if snakemake can handle globs..
-    database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/cp_cow_genome.faa" # Debug: faster with only one file, and this one is the smallest.
-
+    #database_glob: "/cluster/projects/nn9864k/shared/supacow/yannas_pilot_database/finaldb/cp_cow_genome.faa" # Debug: faster with only one file, and this one is the smallest.
+    database_glob: "/cluster/projects/nn9864k/cmkobel/01_proteinextest/aa_databases/03_yannas_and_pruned_protozoans/*"
 
 
 
