--- a/profiles/slurm/config.yaml
+++ b/profiles/slurm/config.yaml
@@ -29,7 +29,7 @@ show-failed-logs: false
 # "
 
 cluster-config: "profiles/slurm/cluster.yaml" 
-cluster: "sbatch --account {cluster.account} --time {cluster.time} --partition {cluster.partition} --mem {cluster.mem} --error={cluster.error} --output={cluster.output}"
+cluster: "sbatch --account {cluster.account} --time {cluster.time} --mem {cluster.mem} --error={cluster.error} --output={cluster.output}"
 #cluster: "sbatch -A {cluster.account} -t {cluster.time} -p {cluster.partition} --mem {cluster.mem} --error={cluster.error} --output={cluster.output}"
 
 
