--- a/profiles/slurm/config.yaml
+++ b/profiles/slurm/config.yaml
@@ -5,7 +5,7 @@ cores: 2048
 #configfile: "configs/workflow.yaml"
 configfile: "config.yaml"
 jobs: 8
-retries: 2
+#retries: 2
 
 # [--directory DIR] 
 keep-going: true 
