--- a/config.yaml
+++ b/config.yaml
@@ -31,8 +31,10 @@ batch_parameters:
 
 
   "220506_DnnT6S_carl": # This batch is purely for developing and debugging the pipeline.
-    d_base: "/faststorage/project/gBGC/supacow/raw_data/uplc-msms-timstof/220506_metaP_rumen_digesta_T6/20220525_CMK" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
+    #d_base: "/faststorage/project/gBGC/supacow/raw_data/uplc-msms-timstof/220506_metaP_rumen_digesta_T6/20220525_CMK" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
+    d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
     database_glob: "/faststorage/project/gBGC/supacow/01_proteomics/aa_databases/aa_databases/03_yannas_and_pruned_protozoans/*" # This one is proper and thorough
+
     samples: 
       #'P1': '20220506_A1_Slot1-01_1_1939.d'       # A 1
       #'P2': '20220506_A2_Slot1-02_1_1940.d'       # A 2
@@ -98,15 +100,13 @@ batch_parameters:
       'D76': '20220506_E10_Slot1-58_1_1996.d'     # E10
 
 
+  "220506_digesta_puchun": # This batch is purely for developing and debugging the pipeline.
+    #d_base: "/faststorage/project/gBGC/supacow/raw_data/uplc-msms-timstof/220506_metaP_rumen_digesta_T6/20220525_CMK" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
+    d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror/20220525_CMK" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
+    # trying to use as much space on ~/userwork as possible. Should give a speed up to not have it on nird. One job might be copying it 
 
+    database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/04_puchuns/*.faa"
 
-
-
-
-
-"220506_digesta_puchun": # This batch is purely for developing and debugging the pipeline.
-    d_base: "/faststorage/project/gBGC/supacow/raw_data/uplc-msms-timstof/220506_metaP_rumen_digesta_T6/20220525_CMK" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
-    database_glob: "/faststorage/project/gBGC/supacow/01_proteomics/aa_databases/aa_databases/03_yannas_and_pruned_protozoans/*" # This one is proper and thorough
     samples: 
       'P1': '20220506_A1_Slot1-01_1_1939.d'       # A 1
       'P2': '20220506_A2_Slot1-02_1_1940.d'       # A 2
@@ -176,10 +176,11 @@ batch_parameters:
 
 # Pick a title
 #batch: "220315_test"
-batch: "220506_DnnT6S_carl"
+
+#batch: "220506_DnnT6S_carl"
 #batch: "220506_DnnT6S_carl_smalltest"
 
-#batch: "220506_digesta_puchun"
+batch: "220506_digesta_puchun"
 
 
 
