--- a/profile/slurm-sigma2-saga/config.yaml
+++ b/profile/slurm-sigma2-saga/config.yaml
@@ -13,7 +13,7 @@ show-failed-logs: true
 # ---- Conda/Mamba ----
 use-conda: true
 conda-frontend: 'mamba'
-conda-prefix: "conda_base/" # This can't be true, I need to use the asscom2 base, right?
+#conda-prefix: "conda_base/" # Much better to use the $SNAKEMAKE_CONDA_PREFIX instead, as all workflows can then use the same envs.
 
 
 
