--- a/profile/slurm-sigma2-saga/config.yaml
+++ b/profile/slurm-sigma2-saga/config.yaml
@@ -4,7 +4,7 @@ jobs: 1000 # max parallel jobs
 keep-going: true 
 #rerun-incomplete: true
 latency-wait: 120
-keep-incomplete: true
+keep-incomplete: false
 
 # This one could be cool to have working 
 show-failed-logs: true
