--- a/config.yaml
+++ b/config.yaml
@@ -179,7 +179,7 @@ batch_parameters:
       #'D75': '20220506_E9_Slot1-57_1_1995.d'      # E9
       #'D76': '20220506_E10_Slot1-58_1_1996.d'     # E10
 
-  "220506_digesta_test": # This batch is purely for developing and debugging the pipeline.
+  "shortest_test": # This batch is purely for developing and debugging the pipeline.
     d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror/20220525_CMK" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
     # trying to use as much space on ~/userwork as possible. Should give a speed up to not have it on nird. One job might be copying it 
     database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/00_digesta_fast_debug/*.faa"
@@ -196,7 +196,7 @@ batch_parameters:
 
 
 #batch: "220506_digesta_test"
-batch: "220506_digesta_puchun"
+batch: "shortest_test"
 
 
 
