--- a/config.yaml
+++ b/config.yaml
@@ -113,7 +113,8 @@ batch_parameters:
     d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror/20220525_CMK" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
     # trying to use as much space on ~/userwork as possible. Should give a speed up to not have it on nird. One job might be copying it 
 
-    database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/04_puchuns/*.faa"
+    #database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/04_puchuns/*.faa"
+    database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/05_puchun/extracted_aas/*.faa"
 
     samples: 
       'P1': '20220506_A1_Slot1-01_1_1939.d'       # A 1
