--- a/config.yaml
+++ b/config.yaml
@@ -2,9 +2,10 @@
 
 #profile: "profile/slurm-sigma2-saga"
 
-philosopher_executable: "/cluster/home/cmkobel/bin/philosopher_v4.1.1_linux_amd64/philosopher"
-msfragger_jar: "/cluster/home/cmkobel/bin/MSFragger-3.4/MSFragger-3.4.jar"
-ionquant_jar: "/cluster/home/cmkobel/bin/MSFragger-3.4/ext/IonQuant-1.7.17.jar"
+philosopher_executable: "/cluster/projects/nn9864k/shared/bin/philosopher_v4.1.1_linux_amd64/philosopher"
+msfragger_jar: "/cluster/projects/nn9864k/shared/bin/MSFragger-3.4/MSFragger-3.4.jar"
+#ionquant_jar: "/cluster/projects/nn9864k/shared/bin/IonQuant/IonQuant-1.7.17.jar"
+ionquant_jar: "/cluster/projects/nn9864k/cmkobel/02_proteomics/MS-pipeline1/bin/IonQuant-1.7.17/IonQuant-1.7.17.jar"
 
 # todo: move these to the profile instead
 #temp_dir: "/scratch/$SLURM_JOB_ID" #genomedk
@@ -182,12 +183,14 @@ batch_parameters:
       #'D76': '20220506_E10_Slot1-58_1_1996.d'     # E10
 
   "shortest_test": # This batch is purely for developing and debugging the pipeline.
-    d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror/20220525_CMK" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
-    # trying to use as much space on ~/userwork as possible. Should give a speed up to not have it on nird. One job might be copying it 
-    database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/00_digesta_fast_debug/*.faa"
+    #d_base: "/trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK"
+    d_base: "data_mirror"
+    #database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/00_fast_debug/*.faa"
+    database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/05_puchun/extracted_aas/*.faa" # Testing with a bigger database
     samples: 
       'D42': '20220506_D10_Slot1-46_1_1984.d'     # D10
-      'D45': '20220506_D12_Slot1-48_1_1986.d'     # D12
+      #'D45': '20220506_D12_Slot1-48_1_1986.d'     # D12
+      'P24': '20220506_C1_Slot1-25_1_1963.d'      # C 1
 
 
 # Pick a title
@@ -198,8 +201,8 @@ batch_parameters:
 
 
 #batch: "220506_digesta_test"
-batch: "shortest_test"
 batch: "220506_digesta_puchun"
+batch: "shortest_test"
 
 
 
