--- a/config.yaml
+++ b/config.yaml
@@ -5,7 +5,7 @@
 philosopher_executable: "/cluster/projects/nn9864k/shared/bin/philosopher_v4.1.1_linux_amd64/philosopher"
 msfragger_jar: "/cluster/projects/nn9864k/shared/bin/MSFragger-3.4/MSFragger-3.4.jar"
 #ionquant_jar: "/cluster/projects/nn9864k/shared/bin/IonQuant/IonQuant-1.7.17.jar"
-ionquant_jar: "/cluster/projects/nn9864k/cmkobel/02_proteomics/MS-pipeline1/bin/IonQuant-1.7.17/IonQuant-1.7.17.jar"
+ionquant_jar: "/cluster/projects/nn9864k/cmkobel/02_proteomics/MS-pipeline1/bin/IonQuant-1.7.17/IonQuant-1.7.17.jar" # Must be adjacent to an ext/ directory
 
 # todo: move these to the profile instead
 #temp_dir: "/scratch/$SLURM_JOB_ID" #genomedk
@@ -109,15 +109,9 @@ batch_parameters:
       'D76': '20220506_E10_Slot1-58_1_1996.d'     # E10
 
 
-  "220506_digesta_puchun": # This batch is purely for developing and debugging the pipeline.
-    #d_base: "/faststorage/project/gBGC/supacow/raw_data/uplc-msms-timstof/220506_metaP_rumen_digesta_T6/20220525_CMK" # This data is also available at NIRD, but I made a copy just to mess around and make sure I don't accidentally delete something important.
-    #d_base: "/cluster/home/cmkobel/userwork/01_proteinextest/MS-pipeline1/data_mirror/20220525_CMK" # simply a copy of "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_puchun/timsTOF/20220525_CMK" 
-    d_base: "/cluster/home/cmkobel/memo/NS9864K@nird/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_+puchun36/timsTOF/20220525_CMK"
-    # trying to use as much space on ~/userwork as possible. Should give a speed up to not have it on nird. One job might be copying it 
-
-    #database_glob: "/cluster/home/cmkobel/userwork/01_proteinextest/aa_databases/04_puchuns/*.faa"
+  "220506_digesta_puchun": 
+    d_base: "data_mirror2" # copy of /trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK/
     database_glob: "/cluster/projects/nn9864k/cmkobel/02_proteomics/aa_databases/05_puchun/extracted_aas/*.faa"
-
     samples: 
       'P1': '20220506_A1_Slot1-01_1_1939.d'       # A 1
       'P2': '20220506_A2_Slot1-02_1_1940.d'       # A 2
@@ -131,7 +125,6 @@ batch_parameters:
       'P9': '20220506_A10_Slot1-10_1_1948.d'      # A10
       'P10': '20220506_A11_Slot1-11_1_1949.d'     # A11
       'P11': '20220506_A12_Slot1-12_1_1950.d'     # A12
-      
       'P12': '20220506_B1_Slot1-13_1_1951.d'      # B 1
       'P13': '20220506_B2_Slot1-14_1_1952.d'      # B 2
       'P14': '20220506_B3_Slot1-15_1_1953.d'      # B 3
@@ -144,7 +137,6 @@ batch_parameters:
       'P21': '20220506_B10_Slot1-22_1_1960.d'     # B10
       'P22': '20220506_B11_Slot1-23_1_1961.d'     # B11
       'P23': '20220506_B12_Slot1-24_1_1962.d'     # B12
-      
       'P24': '20220506_C1_Slot1-25_1_1963.d'      # C 1
       'P25': '20220506_C2_Slot1-26_1_1964.d'      # C 2
       'P26': '20220506_C3_Slot1-27_1_1965.d'      # C 3
@@ -153,34 +145,10 @@ batch_parameters:
       'P29': '20220506_C6_Slot1-30_1_1968.d'      # C 6
       'P30': '20220506_C7_Slot1-31_1_1969.d'      # C 7
       'P31': '20220506_C8_Slot1-32_1_1970.d'      # C 8
-      #'D01': '20220506_C9_Slot1-33_1_1971.d'      # C 9
       'P32': '20220506_C10_Slot1-34_1_1972.d'     # C10
-      #'D02': '20220506_C11_Slot1-35_1_1973.d'     # C11
-      #'D06': '20220506_C12_Slot1-36_1_1974.d'     # C12
-      
       'unknown': '20220506_D1_Slot1-37_1_1975.d'  # D 1
-      #'D08': '20220506_D2_Slot1-38_1_1976.d'      # D 2
-      #'D15': '20220506_D3_Slot1-39_1_1977.d'      # D 3
-      #'D16': '20220506_D4_Slot1-40_1_1978.d'      # D 4
-      #'D21': '20220506_D5_Slot1-41_1_1979.d'      # D 5
-      #'D25': '20220506_D6_Slot1-42_1_1980.d'      # D 6
-      #'D28': '20220506_D7_Slot1-43_1_1981.d'      # D 7
-      #'D29': '20220506_D8_Slot1-44_1_1982.d'      # D 8
-      #'D35': '20220506_D9_Slot1-45_1_1983.d'      # D 9
-      #'D42': '20220506_D10_Slot1-46_1_1984.d'     # D10
-      #'D43': '20220506_D11_Slot1-47_1_1985.d'     # D11
-      #'D45': '20220506_D12_Slot1-48_1_1986.d'     # D12
-      
-      #'D48': '20220506_E1_Slot1-49_1_1987.d'      # E 1
-      #'D51': '20220506_E2_Slot1-50_1_1988.d'      # E 2
-      #'D55': '20220506_E3_Slot1-51_1_1989.d'      # E 3
-      #'D59': '20220506_E4_Slot1-52_1_1990.d'      # E 4
-      #'D60': '20220506_E5_Slot1-53_1_1991.d'      # E 5
-      #'D61': '20220506_E6_Slot1-54_1_1992.d'      # E 6
-      #'D63': '20220506_E7_Slot1-55_1_1993.d'      # E 7
-      #'D67': '20220506_E8_Slot1-56_1_1994.d'      # E8
-      #'D75': '20220506_E9_Slot1-57_1_1995.d'      # E9
-      #'D76': '20220506_E10_Slot1-58_1_1996.d'     # E10
+
+
 
   "shortest_test": # This batch is purely for developing and debugging the pipeline.
     #d_base: "/trd-project2/NS9864K/datasets/2021_supacow/2022-05-06_PEP_timsTOF_D--T6S_24_andpuchun36/timsTOF/20220525_CMK"
@@ -191,6 +159,7 @@ batch_parameters:
       'D42': '20220506_D10_Slot1-46_1_1984.d'     # D10
       #'D45': '20220506_D12_Slot1-48_1_1986.d'     # D12
       'P24': '20220506_C1_Slot1-25_1_1963.d'      # C 1
+      # Save this one as a test dataset. Can't be shared publicly though
 
 
 # Pick a title
@@ -201,8 +170,8 @@ batch_parameters:
 
 
 #batch: "220506_digesta_test"
+#batch: "220506_digesta_puchun"
+#batch: "shortest_test"
 batch: "220506_digesta_puchun"
-batch: "shortest_test"
-
 
 
