update .gitignore. Still adding more and more time. 75% done with 3 days walltime

--- a/profiles/slurm-sigma2-saga/config.yaml
+++ b/profiles/slurm-sigma2-saga/config.yaml
@@ -1,7 +1,7 @@
 local-cores: 8 # front end / head node cores
 cores: 2048 # cluster cores
 jobs: 1000 # max parallel jobs
-keep-going: true 
+keep-going: false
 #rerun-incomplete: true
 latency-wait: 120
 keep-incomplete: false # true for debugging investigations
