--- a/profiles/slurm-sigma2-saga/config.yaml
+++ b/profiles/slurm-sigma2-saga/config.yaml
@@ -6,16 +6,20 @@ local-cores: 16 # front end / head node cores. Most often computing the DAG will
 
 
 # ---- Back end stuff ----
-cores: 2048 # cluster cores
+cores: 2048 # cluster cores # Fair play.
 jobs: 128 # max parallel jobs. Good idea to limit this for dangerous situations.
 keep-going: true 
-#rerun-incomplete: true
 latency-wait: 120 # Some file systems can be slow.
-keep-incomplete: false
 
-# This one could be cool to have working 
-show-failed-logs: true
+# Flip these for debugging:
+keep-incomplete: false # true for development/debugging
+rerun-triggers: "mtime" 
 
+
+# ---- Logging ----
+show-failed-logs: true # This one requires additional configuration beyond the scope of this configuration file.
+log-handler-script: "log_handler_script.py"
+    
 
 
 # ---- Conda/Mamba/Apptainer ----
@@ -29,17 +33,17 @@ conda-frontend: 'mamba' # Make sure that you install mamba in the environment wh
 cluster-cancel: "scancel"
 
 cluster:
-  mkdir -p logs/ &&
   sbatch
     --parsable
     --cpus-per-task={threads}
     --mem={resources.mem_mb}
-    --job-name=j_{rule}_{wildcards}
+    --job-name=st-{rule}_{wildcards}
     --output=logs/%j-{jobid}-{rule}.out.log
     --error=logs/%j-{jobid}-{rule}.err.log
     --time={resources.runtime}
     --account=nn9864k
     --partition={resources.partition}
+    --qos={resources.qos}
     
 
 
@@ -50,6 +54,7 @@ default-resources:
   - runtime='12:00:00'
   - tmpdir='$SCRATCH'
   - partition=normal
+  - qos=devel
   
   
 
@@ -83,6 +88,4 @@ default-resources:
 # ---- Singularity ----
 #use-singularity: True
 #singularity-prefix: "/faststorage/home/cmkobel/singularity_images/"
-
-
 
